--- a/style/style.css
+++ b/style/style.css
@@ -7,10 +7,10 @@
 body {
     height: 100vh;
     width: 100vw;
-    font-size: 14px;
+    font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
     color: #000;
-    background: #f0ffff;
+    background: #ffffff;
     text-align: center;
 }
 
@@ -19,7 +19,7 @@ body {
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -33,19 +33,18 @@ h1 {
 .table-cont {
     height: 80%;
     width: 90%;
-
 }
 
 .table-cont,
 th,
 td {
-    border: 1px solid #fff;
+    /* border: 1px solid #000; */
     border-collapse: collapse;
 }
 
 th,
 td {
-    padding: 10px;
+    padding: 7px;
     text-align: center;
 }
 
@@ -58,7 +57,6 @@ tr:nth-child(odd) {
 }
 
 th {
-    /* height: 20%; */
     background-color: #000;
     color: #fff;
 }
