--- a/style/style.css
+++ b/style/style.css
@@ -64,8 +64,11 @@ select option {
 .table-cont,
 th,
 td {
-    /* border: 1px solid #000; */
     border-collapse: collapse;
+}
+
+tr {
+    border-bottom: 1px dashed #D3D3D3;
 }
 
 th,
@@ -74,19 +77,15 @@ td {
     text-align: center;
 }
 
-/* TODO: CHECK!!! */
-/* tbody tr:nth-child(2n) {
-    border: 1px solid #000;
-    background-color: #eee;
-}
-
-tbody tr:nth-child(2n + 1) {
-    background-color: #fff;
-} */
-
 th {
+    height: 40px;
     background-color: #000;
     color: #fff;
+}
+
+.table-cont-search {
+    height: 20%;
+    width: 90%;
 }
 
 .btn {
@@ -110,15 +109,7 @@ th {
 
 .btn:hover {
     filter: invert(0%) sepia(48%) saturate(564%) hue-rotate(93deg) brightness(94%) contrast(92%);
-
 }
-
-/* .edit-btn:active, 
-.btn:active
-.remove-btn:active {
-    border: none;
-    filter: invert(0%) sepia(48%) saturate(564%) hue-rotate(93deg) brightness(94%) contrast(92%);
-} */
 
 .remove-btn {
     background: url('../img/trash-solid.svg') no-repeat center center/cover;
@@ -130,12 +121,25 @@ th {
 }
 
 .confirm-btn {
-    background-color: blue;
-    color: #000;
+    background: url('../img/check-circle-regular.svg') no-repeat center center/cover;
+    filter: invert(69%) sepia(48%) saturate(564%) hue-rotate(93deg) brightness(94%) contrast(92%);
+    height: 30px;
+    width: 30px;
+    text-align: center;
+    border: none;
 }
 
 .cancel-btn {
-    background-color: yellow;
-    color: #000;
+    background: url('../img/undo-solid.svg') no-repeat center center/cover;
+    filter: invert(26%) sepia(93%) saturate(4062%) hue-rotate(351deg) brightness(94%) contrast(110%);
+    height: 30px;
+    width: 30px;
+    text-align: center;
+    border: none;
+}
+
+.input-edit {
+    width: 120px;
+    text-align: center;
 }
 
